# migracion-csv-postgres-rust

./: README.md
project/: Cargo.toml  datos.csv  docker-compose.yml
project/src/: database.rs  main.rs  reader.rs
