[package]
name = "project"
version = "0.1.0"
authors = ["Javier <javier.tapia@epn.edu.ec>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.3"
actix-web = "3"
futures = "0.3.1"
sanitize-filename = "0.2"
csv = "1.1.5"